se corrigieron los textos

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1> Pagina del 28 de Agosto</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum iste modi quae dignissimos nemo! Alias aperiam ut deleniti eum dicta reiciendis perspiciatis velit? Ipsum culpa deleniti atque iusto magni ad!</p>
+    <p>Empresa numero 1</p>
 </body>
 </html>
