Se modifico la pagina

--- a/index.html
+++ b/index.html
@@ -7,7 +7,35 @@
     <title>Practica 28 Agosto</title>
 </head>
 <body>
-    <h1> Pagina del 28 de Agosto</h1>
-    <p>Empresa numero 1</p>
+    <h1> TOP 3 DE ARTISTAS FAVORITOS</h1>
+    <header>ARTISTA 1</header>
+    <p>
+        <section id="The weeknd"><mark>THE WEEKND</mark></section>
+        <p><strong>The weeknd</strong> conocido tambien por su numero real <span style="color": green>Abel</span></p>
+        <p>Es uno de los cantantes mas famosos y exitosos de la generacion y uno de mis favoritos por su talento y su trayectoria</p>
+        Una de sus canciones mas famosas son:
+        <ol>
+            <li>Call out my name </li>
+            <li>Cant feel my face</li>
+            <li>The hills</li>
+        </ol>
+    </p>
+    <header>ARTISTA 2</header>
+    <p>
+        <section id="Ariana Grande"> <mark>Ariana Grande</mark></section>
+        <p> <strong>Ariana grande</strong> es una cantante con un gran rango vocal y una voz con mucha potencia, a pesar de que es una cantante retirada es una de mis favoritas</p>
+        Una de sus canciones mas famosas son:
+        <ol>
+            <li>Thank u next</li>
+            <li>7 rings</li>
+            <li>Problem</li>
+        </ol>
+    </p>
+    <header>ARTISTA 3</header>
+    <p>
+        <section id="Adele"> <mark>Adele</mark> </section>
+        <p><strong>Adele</strong> es una de las cantantes mas queridas, exitorsas y talentosas, con la potencia de su voz y canciones que nos conmueven a todos se convierte en una de mis favoritas</p>
+        
+    </p>
 </body>
 </html>
