Se corrigio con nav

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Practica 28 Agosto</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li>The weeknd</li>
+            <li>Ariana Grande</li>
+            <li>Adele</li>
+        </ul>
+    </nav>
     <h1> TOP 3 DE ARTISTAS FAVORITOS</h1>
     <header>ARTISTA 1</header>
     <p>
@@ -35,7 +42,12 @@
     <p>
         <section id="Adele"> <mark>Adele</mark> </section>
         <p><strong>Adele</strong> es una de las cantantes mas queridas, exitorsas y talentosas, con la potencia de su voz y canciones que nos conmueven a todos se convierte en una de mis favoritas</p>
-        
+        Una de sus canciones mas famosas son:
+        <ol>
+            <li>Someone like you</li>
+            <li>Easy on me</li>
+            <li>Set fire to the rain</li>
+        </ol>
     </p>
 </body>
 </html>
