Se modifico con nav

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Practica 28 Agosto</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="The weeknd"></a></li>
+            <li><a href="Ariana Grande"></a></li>
+            <li><a href="Adele"></a></li>
+        </ul>
+    </nav>
     <h1> TOP 3 DE ARTISTAS FAVORITOS</h1>
     <header>ARTISTA 1</header>
     <p>
